# fractal_image_generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/windows/: Qt5Locator.cmake
include/: fractal_data.hpp  image.hpp  params.hpp  rand_gen_std.hpp  rand_gen_thurst.hpp  renderer.hpp  renderer_cuda.hpp  transforms.hpp  utils.hpp
src/: cuda_utils.cu  cuda_utils.cuh  fractal_data.cpp  image.cpp  image.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  openglcudaview.cpp  openglcudaview.cpp.autosave  openglcudaview.hpp  params.cpp  rand_gen_std.cpp  rand_gen_thurst.cu  renderer.cpp  renderer_cuda.cu  resolutionmodel.cpp  resolutionmodel.hpp  transforms.cu  utils.cpp  variation.cpp  variation.hpp
